--- a/city-tours/src/index.scss
+++ b/city-tours/src/index.scss
@@ -12,6 +12,8 @@ $mainGreen: #82b340;
 $mainWhite: #fff;
 $mainGrey: #ececec;
 
+$mainTransition: all 0.375s linear;
+
 body {
   font-family: "Open Sans", sans-serif;
   background: $mainWhite;
