changed background colour to green

--- a/city-tours/src/index.scss
+++ b/city-tours/src/index.scss
@@ -16,6 +16,6 @@ $mainTransition: all 0.375s linear;
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: $mainWhite;
+  background: $mainGreen;
   color: $mainBlack;
 }
